patched for pm
added new events
updated commands